--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,31 +6,98 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇫🇷_FR_法国_1
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 156.225.67.104
+    port: 30000
+    cipher: auto
+    uuid: 29a5d48e-24f1-48fd-a5e1-9a46cb31032f
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1696944806961
+      headers:
+        host: www.41758112.xyz
+  - &id002
+    name: 🇷🇺_RU_俄罗斯联邦
     type: trojan
-    server: 15.237.233.125
+    server: v234.jsvpn.xyz
+    port: 443
+    udp: true
+    password: ee5d4ca4-cb15-4201-ba4f-4709b5a833d4
+    skip-cert-verify: true
+    network: tcp
+  - &id003
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+    type: vmess
+    server: mm2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm2.shabijichang.com
+  - &id004
+    name: 🇨🇳_CN_中国_1
+    type: vmess
+    server: 1.117.69.235
+    port: 80
+    cipher: auto
+    uuid: ee0a4b54-be8d-4f56-be4d-521bd1ae443d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id005
+    name: 🇦🇫_AF_阿富汗
+    type: ss
+    server: 121.127.46.147
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id006
+    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_1
+    type: vmess
+    server: 162.159.137.9
+    port: 2052
+    cipher: auto
+    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us.wx.alue.link
+  - &id007
+    name: 🇬🇧_GB_英国_1
+    type: trojan
+    server: 13.43.242.238
     port: 22222
     udp: true
     password: telegram-id-privatevpns
     sni: trj.rollingnext.co.uk
     skip-cert-verify: true
     network: tcp
-  - &id002
-    name: 🇬🇧_GB_英国
+  - &id008
+    name: 🇫🇷_FR_法国_1
     type: ss
-    server: 198.244.231.34
+    server: 57.128.32.83
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id003
-    name: 🇫🇷_FR_法国_2
-    type: ss
-    server: 51.158.195.96
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id004
-    name: 🇺🇸_US_美国_1
+  - &id009
+    name: 🇺🇸_US_美国_2
     type: vmess
     server: singapore.com
     port: 8080
@@ -44,36 +111,72 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: ssrsub.v03.ssrsub.com
-  - &id005
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
-    type: vmess
-    server: xn2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
+  - &id010
+    name: 🇩🇪_DE_德国
+    type: trojan
+    server: 18.153.47.169
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: xn2.shabijichang.com
-  - &id006
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 5.161.159.21
+    network: tcp
+  - &id011
+    name: 🇺🇸_US_美国_3
+    type: ss
+    server: 89.187.181.179
     port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id012
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: yd1.992688.xyz
+    port: 2052
     cipher: auto
-    uuid: 3d1fab6e-3bd6-472b-8d9c-9934c04eaf40
+    uuid: 6963920a-8bb3-4f87-b231-56ccb9f9b3a7
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: http
-  - &id007
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: vceu3.vpn66.eu.org
+  - &id013
+    name: 🇫🇷_FR_法国_2
+    type: ss
+    server: 51.158.195.96
+    port: 80
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id014
+    name: 🇺🇸_US_美国_4
     type: vmess
-    server: hdlb3.shabijichang.com
+    server: 104.31.16.196
+    port: 2053
+    cipher: auto
+    uuid: 72f76c36-3e3c-45b3-a61f-d8f017345958
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: iraniancp.click
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: b5.iraniancp.click
+  - &id015
+    name: 🇫🇷_FR_法国_3
+    type: ss
+    server: 146.59.110.171
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id016
+    name: 🇺🇸_US_美国->🇸🇦_SA_沙特阿拉伯
+    type: vmess
+    server: jd3.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -84,8 +187,101 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: hdlb3.shabijichang.com
-  - &id008
+        host: jd3.shabijichang.com
+  - &id017
+    name: 🇫🇷_FR_法国_4
+    type: trojan
+    server: 15.188.43.83
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
+    type: vmess
+    server: 104.21.75.246
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl4.shabijichang.com
+  - &id019
+    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_2
+    type: vmess
+    server: cf.yx.alue.link
+    port: 2052
+    cipher: auto
+    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us.wx.alue.link
+  - &id020
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 154.85.1.244
+    port: 30000
+    cipher: auto
+    uuid: 1d474f0b-e78d-4af9-bc4a-a467467bc7a7
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1696682720138
+      headers:
+        host: www.28115361.xyz
+  - &id021
+    name: 🇨🇳_CN_中国_2
+    type: vmess
+    server: 124.220.57.75
+    port: 80
+    cipher: auto
+    uuid: 1b3dd95b-f6dc-4f20-97aa-3b365358419c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id022
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 172.67.184.13
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id023
+    name: 🇬🇧_GB_英国_2
+    type: trojan
+    server: 13.43.244.134
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id024
     name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡
     type: vmess
     server: 104.16.68.38
@@ -100,23 +296,10 @@ proxies:
       path: /
       headers:
         host: lu.wx.alue.link
-  - &id009
-    name: 🇨🇳_CN_中国_1
+  - &id025
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
-    server: 124.220.57.75
-    port: 80
-    cipher: auto
-    uuid: 1b3dd95b-f6dc-4f20-97aa-3b365358419c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id010
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
-    type: vmess
-    server: flkf2.shabijichang.com
+    server: ld2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -127,28 +310,14 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: flkf2.shabijichang.com
-  - &id011
-    name: 🇫🇷_FR_法国_3
-    type: ss
-    server: 57.128.32.83
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id012
-    name: 🇫🇷_FR_法国_4
-    type: ss
-    server: 146.59.110.171
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id013
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
+        host: ld2.shabijichang.com
+  - &id026
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: yd1.992688.xyz
+    server: lt1.992688.xyz
     port: 2052
     cipher: auto
-    uuid: 6963920a-8bb3-4f87-b231-56ccb9f9b3a7
+    uuid: fa5fc74f-0f0b-4221-82ba-dc7cd24e24e5
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -156,188 +325,7 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: vceu3.vpn66.eu.org
-  - &id014
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 45.199.138.191
-    port: 30000
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1696251522438
-  - &id015
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
-    type: vmess
-    server: 172.67.184.13
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: xn2.shabijichang.com
-  - &id016
-    name: 🇫🇷_FR_法国_5
-    type: ss
-    server: 146.59.111.195
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id017
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 38.114.114.143
-    port: 443
-    password: pKEW8JPByTVTLtM
-    cipher: aes-256-gcm
-  - &id018
-    name: 🇦🇫_AF_阿富汗
-    type: ss
-    server: 121.127.46.147
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id019
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 67.21.90.5
-    port: 443
-    cipher: auto
-    uuid: 28dd6c26-05a5-4bba-8a5d-052b70ac13b2
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1694429908748
-      headers:
-        host: www.75409854.xyz
-  - &id020
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: us.nodegroups.ink
-    port: 33210
-    cipher: auto
-    uuid: 2d31764d-8633-3170-a946-27ec418bbb78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id021
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: vmess
-    server: us.nodegroups.ink
-    port: 33209
-    cipher: auto
-    uuid: 2d31764d-8633-3170-a946-27ec418bbb78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id022
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: ss
-    server: starspeed.tbh.iosds.com
-    port: 19290
-    password: 6cc1b03a-2eab-4f13-ab25-32e7622f0a56
-    cipher: chacha20-ietf-poly1305
-  - &id023
-    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大_1
-    type: vmess
-    server: cdn.node.user-sub.pddns-usersdk.com
-    port: 11302
-    cipher: auto
-    uuid: a69cc072-3574-3377-83f3-15e1d61f2c5a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ef483582-6269-468c-93af-c512ec2b8a61
-      headers:
-        host: cdn.node.user-sub.pddns-usersdk.com
-  - &id024
-    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大_2
-    type: vmess
-    server: cdn.node.user-sub.pddns-usersdk.com
-    port: 11301
-    cipher: auto
-    uuid: a69cc072-3574-3377-83f3-15e1d61f2c5a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ef483582-6269-468c-93af-c512ec2b8a61
-      headers:
-        host: cdn.node.user-sub.pddns-usersdk.com
-  - &id025
-    name: 🇨🇳_CN_中国_2
-    type: vmess
-    server: 1.117.69.235
-    port: 80
-    cipher: auto
-    uuid: ee0a4b54-be8d-4f56-be4d-521bd1ae443d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id026
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
-    type: vmess
-    server: hdlb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: hdlb2.shabijichang.com
-  - &id027
-    name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
-    type: vmess
-    server: xn3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: xn3.shabijichang.com
-  - &id028
-    name: 🇺🇸_US_美国->🇮🇹_IT_意大利
-    type: vmess
-    server: ml3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ml3.shabijichang.com
+        host: vcus2.vpn66.eu.org
 proxy-groups:
   - name: PROXY
     type: select
@@ -390,8 +378,6 @@ proxy-groups:
       - *id024
       - *id025
       - *id026
-      - *id027
-      - *id028
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -423,8 +409,6 @@ proxy-groups:
       - *id024
       - *id025
       - *id026
-      - *id027
-      - *id028
   - name: SELECT
     type: select
     proxies:
@@ -454,8 +438,6 @@ proxy-groups:
       - *id024
       - *id025
       - *id026
-      - *id027
-      - *id028
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
